--- a/styles/app.css
+++ b/styles/app.css
@@ -85,3 +85,12 @@ h1 {
   user-select: text;
   @apply px-0;
 }
+
+[data-theme='dracula'] .btn-ghost:focus-visible {
+  @apply outline-primary;
+}
+
+html,
+body {
+  scroll-behavior: smooth;
+}
