--- a/styles/app.css
+++ b/styles/app.css
@@ -138,7 +138,7 @@ body {
   @apply !font-display;
 }
 
-.link { 
+.link {
   @apply rounded-btn;
 }
 
@@ -160,7 +160,7 @@ body {
 
 @screen md {
   :root {
-  --bleed-padding: 2rem;
+    --bleed-padding: 2rem;
   }
 }
 
@@ -191,6 +191,11 @@ body {
 
 *:hover > .heading-anchor:hover:after {
   @apply text-current;
+}
+
+.max-h-dialog-box {
+  max-height: 90svh;
+  max-height: 90vh;
 }
 
 @tailwind utilities;
